--- a/banco.properties
+++ b/banco.properties
@@ -1,9 +1,9 @@
 #Configurações para banco de dados
-#Mon May 29 22:00:53 BRT 2017
-banco.nomeServidor=WinServer2008
+#Sat Jul 15 14:24:51 BRT 2017
+banco.nomeServidor=localhost
 banco.usuario=postgres
 banco.senha=postgres
 banco.numPorta=5432
 banco.jdbcDB=postgresql
-banco.driverDB=org.postgresql.Driver
 banco.nomeBanco=SAMHO
+banco.driverDB=org.postgresql.Driver
